--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
-姓名：微信
+姓名：微信2
 在：
   工作流程_调度：
   浙江：
-    # 代表国际标准时间23点0分，北京时间需要+8小时，代表北京时间上午7点运行
+    #代表国际标准时间23点0分，北京时间需要+8小时，代表北京时间上午7点运行# 代表国际标准时间23点0分，北京时间需要+8小时，代表北京时间上午7点运行
 -计划任务：'0 23 * * *'
 职位：
 #将工作流程中运行的所有作业组合在一起
   建造者：
-  #定义build名为作业的属性。子键将定义作业的属性
+  #定义build称为作业的属性。子键将定义作业的属性#定义build称为作业的属性。子键将定义作业的属性
     运行系统： ubuntu-20.04
     步骤：
       -使用： actions/checkout@v2
